--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     volumes:
       - .:/code
     ports:
-      - "5000:80"
+      - "5050:80"
+    environment:
+      - ENABLE_METRICS=true
