--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,39 +3,40 @@ name: Deploy FastAPI App to EC2
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: ap-northeast-2
+      ECR_REGISTRY: 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com
+      IMAGE_REPO_NAME: js-fastapi-monitoring
+
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
+      - name: Checkout source code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Login to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and push Docker image
-      env:
-        AWS_REGION: ap-northeast-2
-        ECR_REGISTRY: 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com
-        IMAGE_REPO_NAME: js-fastapi-monitoring
-      run: |
-        docker build -t $ECR_REGISTRY/$IMAGE_REPO_NAME:latest .
-        docker push $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
+      - name: Build and push Docker image
+        run: |
+          docker build -t $ECR_REGISTRY/$IMAGE_REPO_NAME:latest .
+          docker push $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
 
-    - name: Deploy to EC2 via SSH
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        script: |
-          aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com
-          docker pull 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com/js-fastapi-monitoring:latest
-          docker stop js-fastapi-monitoring || true && docker rm js-fastapi-monitoring || true
-          docker run -d --name js-fastapi-monitoring -p 5050:80 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com/js-fastapi-monitoring:latest
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
+            docker pull $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
+            docker stop js-fastapi-monitoring || true && docker rm js-fastapi-monitoring || true
+            docker run -d --name js-fastapi-monitoring -p 5050:80 $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
