--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
+            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 486677509303.dkr.ecr.ap-northeast-2.amazonaws.com
             docker pull $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
             docker stop js-fastapi-monitoring || true && docker rm js-fastapi-monitoring || true
             docker run -d --name js-fastapi-monitoring -p 5050:80 $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
