--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          envs: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,ECR_REGISTRY,IMAGE_REPO_NAME
           script: |
-            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-            export AWS_SECRET_ACCESS_KEY=${{ secrets.SECRET_ACCESS_KEY }}
-            export AWS_DEFAULT_REGION=ap-northeast-2
-
-            sudo docker login --username AWS --password $(aws ecr get-login-password --region ap-northeast-2) $ECR_REGISTRY
+            export AWS_REGION=ap-northeast-2
+            echo "$AWS_SECRET_ACCESS_KEY" | sudo docker login --username AWS --password-stdin $ECR_REGISTRY
             sudo docker pull $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
-            sudo docker stop js-fastapi-monitoring || true && sudo docker rm js-fastapi-monitoring || true
+            sudo docker stop js-fastapi-monitoring || true
+            sudo docker rm js-fastapi-monitoring || true
             sudo docker run -d --name js-fastapi-monitoring -p 5050:80 $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
