--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,10 +42,13 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          envs: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,ECR_REGISTRY,IMAGE_REPO_NAME
           script: |
+            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            export AWS_SECRET_ACCESS_KEY=${{ secrets.SECRET_ACCESS_KEY }}
             export AWS_REGION=ap-northeast-2
-            echo "$AWS_SECRET_ACCESS_KEY" | sudo docker login --username AWS --password-stdin $ECR_REGISTRY
+
+            aws ecr get-login-password --region $AWS_REGION | sudo docker login --username AWS --password-stdin $ECR_REGISTRY
+
             sudo docker pull $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
             sudo docker stop js-fastapi-monitoring || true
             sudo docker rm js-fastapi-monitoring || true
