--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image to ECR
         run: |
           docker build -t $ECR_REGISTRY/$IMAGE_REPO_NAME:latest .
           docker push $ECR_REGISTRY/$IMAGE_REPO_NAME:latest
@@ -46,6 +46,8 @@ jobs:
             export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             export AWS_SECRET_ACCESS_KEY=${{ secrets.SECRET_ACCESS_KEY }}
             export AWS_REGION=ap-northeast-2
+            export ECR_REGISTRY=486677509303.dkr.ecr.ap-northeast-2.amazonaws.com
+            export IMAGE_REPO_NAME=js-fastapi-monitoring
 
             aws ecr get-login-password --region $AWS_REGION | sudo docker login --username AWS --password-stdin $ECR_REGISTRY
 
